// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-0:first-of-type {
  margin-top: 0;
}

.emotion-0:last-of-type {
  margin-bottom: 0;
}

.emotion-0:empty {
  display: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: red;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-0:first-of-type {
  margin-top: 0;
}

.emotion-0:last-of-type {
  margin-bottom: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-4"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="emotion-0"
    >
      456
    </div>
  </div>
</div>
`;

exports[`should render wrappers only for valid children 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-0:first-of-type {
  margin-top: 0;
}

.emotion-0:last-of-type {
  margin-bottom: 0;
}

.emotion-0:empty {
  display: none;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      <span>
        testing vflow
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        testing vflow
      </span>
    </div>
  </div>
</div>
`;
